--- a/.github/workflows/code2gether-congo.yml
+++ b/.github/workflows/code2gether-congo.yml
@@ -3,16 +3,19 @@ on:
   push:
     branches:
     - dev
+
 env:
-  AZURE_WEBAPP_NAME: code2gether-congo
-  AZURE_WEBAPP_PACKAGE_PATH: src/Congo.WebApi/publish
-  AZURE_WEBAPP_PUBLISH_PROFILE: ${{ secrets.code2gether_congo_448c }}
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 5.0.x
-  WORKING_DIRECTORY: src/Congo.WebApi
+
 jobs:
-  build-and-deploy:
+  deploy-api:
     runs-on: ubuntu-latest
+    env:
+      AZURE_WEBAPP_NAME: code2gether-congo
+      AZURE_WEBAPP_PACKAGE_PATH: src/Congo.WebApi/publish
+      AZURE_WEBAPP_PUBLISH_PROFILE: ${{ secrets.API_PUBLISH_PROFILE }}
+      WORKING_DIRECTORY: src/Congo.WebApi
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET Core
@@ -25,6 +28,37 @@ jobs:
       run: dotnet build "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-restore
     - name: Test
       run: dotnet test "${{ env.WORKING_DIRECTORY }}" --no-build
+    - name: Publish
+      run: dotnet publish "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-build --output "${{ env.AZURE_WEBAPP_PACKAGE_PATH }}"
+    - name: Deploy to Azure WebApp
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: ${{ env.AZURE_WEBAPP_NAME }}
+        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+        publish-profile: ${{ env.AZURE_WEBAPP_PUBLISH_PROFILE }}
+    - name: Publish Artifacts
+      uses: actions/upload-artifact@v1.0.0
+      with:
+        name: webapp
+        path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+
+  deploy-frontend:
+    runs-on: ubuntu-latest
+    env:
+      AZURE_WEBAPP_NAME: code2gether-congo-frontend
+      AZURE_WEBAPP_PACKAGE_PATH: src/Congo.RazorPages/publish
+      AZURE_WEBAPP_PUBLISH_PROFILE: ${{ secrets.FRONTEND_PUBLISH_PROFILE }}
+      WORKING_DIRECTORY: src/Congo.WebApi
+    steps:
+    - uses: actions/checkout@v2
+    - name: Setup .NET Core
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
+    - name: Restore
+      run: dotnet restore "${{ env.WORKING_DIRECTORY }}"
+    - name: Build
+      run: dotnet build "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-restore
     - name: Publish
       run: dotnet publish "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-build --output "${{ env.AZURE_WEBAPP_PACKAGE_PATH }}"
     - name: Deploy to Azure WebApp
