--- a/.github/workflows/code2gether-congo.yml
+++ b/.github/workflows/code2gether-congo.yml
@@ -48,7 +48,7 @@ jobs:
       AZURE_WEBAPP_NAME: code2gether-congo-frontend
       AZURE_WEBAPP_PACKAGE_PATH: src/Congo.RazorPages/publish
       AZURE_WEBAPP_PUBLISH_PROFILE: ${{ secrets.FRONTEND_PUBLISH_PROFILE }}
-      WORKING_DIRECTORY: src/Congo.WebApi
+      WORKING_DIRECTORY: src/Congo.RazorPages
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET Core
