--- a/.github/workflows/code2gether-congo.yml
+++ b/.github/workflows/code2gether-congo.yml
@@ -1,4 +1,4 @@
-name: Build and deploy .NET Core app to Linux WebApp code2gether-congo
+name: Deploy code2gether-congo
 on:
   push:
     branches:
@@ -49,6 +49,37 @@ jobs:
       AZURE_WEBAPP_PACKAGE_PATH: src/Congo.RazorPages/publish
       AZURE_WEBAPP_PUBLISH_PROFILE: ${{ secrets.FRONTEND_PUBLISH_PROFILE }}
       WORKING_DIRECTORY: src/Congo.RazorPages
+    steps:
+    - uses: actions/checkout@v2
+    - name: Setup .NET Core
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
+    - name: Restore
+      run: dotnet restore "${{ env.WORKING_DIRECTORY }}"
+    - name: Build
+      run: dotnet build "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-restore
+    - name: Publish
+      run: dotnet publish "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-build --output "${{ env.AZURE_WEBAPP_PACKAGE_PATH }}"
+    - name: Deploy to Azure WebApp
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: ${{ env.AZURE_WEBAPP_NAME }}
+        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+        publish-profile: ${{ env.AZURE_WEBAPP_PUBLISH_PROFILE }}
+    - name: Publish Artifacts
+      uses: actions/upload-artifact@v1.0.0
+      with:
+        name: webapp
+        path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+
+  deploy-management:
+    runs-on: ubuntu-latest
+    env:
+      AZURE_WEBAPP_NAME: code2gether-congo-management
+      AZURE_WEBAPP_PACKAGE_PATH: src/Congo.Blazor/publish
+      AZURE_WEBAPP_PUBLISH_PROFILE: ${{ secrets.BLAZOR_PUBLISH_PROFILE }}
+      WORKING_DIRECTORY: src/Congo.Blazor
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET Core
