--- a/.github/workflows/code2gether-congo.yml
+++ b/.github/workflows/code2gether-congo.yml
@@ -12,7 +12,7 @@ jobs:
   deploy-api:
     runs-on: ubuntu-latest
     env:
-      AZURE_WEBAPP_NAME: code2gether-congo
+      AZURE_WEBAPP_NAME: code2gether-congo-api
       AZURE_WEBAPP_PACKAGE_PATH: src/Congo.WebApi/publish
       AZURE_WEBAPP_PUBLISH_PROFILE: ${{ secrets.API_PUBLISH_PROFILE }}
       WORKING_DIRECTORY: src/Congo.WebApi
@@ -45,7 +45,7 @@ jobs:
   deploy-frontend:
     runs-on: ubuntu-latest
     env:
-      AZURE_WEBAPP_NAME: code2gether-congo-frontend
+      AZURE_WEBAPP_NAME: code2gether-congo
       AZURE_WEBAPP_PACKAGE_PATH: src/Congo.RazorPages/publish
       AZURE_WEBAPP_PUBLISH_PROFILE: ${{ secrets.FRONTEND_PUBLISH_PROFILE }}
       WORKING_DIRECTORY: src/Congo.RazorPages
